deploy/backend/backend.yaml
# 4. Deployment (The Workload)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-backend
  namespace: default
spec:
  replicas: 2  # Scalability: Run 2 copies to prove statelessness
  selector:
    matchLabels:
      app: store-backend
  template:
    metadata:
      labels:
        app: store-backend
    spec:
      serviceAccountName: backend-sa
      containers:
        - name: api
          image: store-backend:v1
          imagePullPolicy: IfNotPresent # Use the local image we loaded
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              memory: "128Mi"
              cpu: "200m"
---
# 5. Service (Internal Networking)
apiVersion: v1
kind: Service
metadata:
  name: store-backend
  namespace: default
spec:
  selector:
    app: store-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
